--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
       <p>2023</p>
     </div>
     <div class="pg-1 SEM1">
-      <h2 class="title">SEMANA 1</h2>
       <div class="titulo">
         <p>Marcos generales de la reflexión política</p>
       </div>
@@ -91,11 +90,14 @@
           un mayor conocimiento social.
         </p>
       </div>
-      <!-- <figure class="platon"><img src="./assets/img/platon-biografia-pensamiento-obras.gif" alt=""></figure> -->
+      <figure class="platon"><img src="./assets/img/Platon.png" alt=""></figure>
+      <figure class="platon"><img src="./assets/img/Platon.png" alt=""></figure>
+      <figure class="platon"><img src="./assets/img/Platon.png" alt=""></figure>
+      <figure class="platon"><img src="./assets/img/Platon.png" alt=""></figure>
+
     </div>
 
     <div class="pg-3 SEM2">
-      <!-- <h2 class="title">SEMANA 1</h2> -->
       <div class="titulo">
         <p>Las grandes ideas de la atenas democraticas</p>
       </div>
@@ -110,7 +112,7 @@
           presidente y el dirigente de esta protesta con el objetivo de llegar a un acuerdo por el bien del
           país y de esta manera prevalezca la justicia y el respeto en nuestra sociedad.
 
-          De forma subjetiva quizás mantengan relación, pero siendo objetivos no justifica el estado
+          <!-- De forma subjetiva quizás mantengan relación, pero siendo objetivos no justifica el estado
           actual de lo que conocemos como política. El mito hace referencia a acciones subjetivas
           quitando valor a la verdad objetiva que se manifiesta en hechos como la carencia de recursos,
           entre los principales accesos libre a la educación, seguridad pública y atención médica. El Perú
@@ -118,7 +120,7 @@
           análisis se realiza con datos y evidencias. En estas circunstancias no podemos basarnos en
           “nuestros sentimientos o pensares” debemos ser objetivos en decir que son problemáticas
           presentes las cuales no necesariamente se muestran por la presencia o ausencia de ciertas
-          cualidades.
+          cualidades. -->
         </p>
       </div>
       <div>
@@ -136,12 +138,12 @@
           de la distribución de valores y principios fundamentales los cuales serán aplicados en asuntos
           públicos de una sociedad garantizando coexistencia pacífica entre múltiples comunidades.
 
-          La política como una herramienta de orden social: En la última parte del mito, Zeus dicta una
+          <!-- La política como una herramienta de orden social: En la última parte del mito, Zeus dicta una
           ley que establece que aquellos que no puedan participar del respeto y la justicia deben ser
           eliminados como una peste social. Esto nos demuestra que la política tiene una función
           importante en la creación y el mantenimiento del orden social, donde aquellos que no respeten
           las normas y valores establecidos deben ser castigados para garantizar la coexistencia pacífica
-          en la sociedad.
+          en la sociedad. -->
         </p>
       </div>
     </div>
@@ -164,35 +166,38 @@
         </p>
       </div>
       <div>
-        <p>¿Qué opinas de la posición de Calicles? ¿De qué manera se evidencia el
-          pensamiento político de él en la actualidad?</p>
         <p>¿Qué opinas de la posición de Calicles?</p>
-        <p>Opino que es un pensamiento de acuerdo con su tiempo cuando las leyes sí las escribían
+        <p>
+          Opino que es un pensamiento de acuerdo con su tiempo cuando las leyes sí las escribían
           los débiles y las grandes masas, ya que en aquellos tiempos si se tomaba en cuenta la voz
           del pueblo “la voz del pueblo es la voz de dios” y existe una democracia innata y
           verdadera respetando los principios de igualdad y justicia.
 
-          ¿La posición de Calicles tiene una posición naturalista, ya que es la regla de los inicios de
+          <!-- ¿La posición de Calicles tiene una posición naturalista, ya que es la regla de los inicios de
           los seres vivos, donde el más fuerte tiene la supremacía sobre otros, esto ha ayudado a su
           selección de los mejores especímenes, en la actualidad se sigue dando ya que los más
           fuertes no dejan de serlo por ejemplo EE. UU. no quiere que nadie lo supere en asuntos
           de sus intereses y hace todo lo posible para seguir en la supremacía, usando
-          organizaciones o métodos cuestionables.
+          organizaciones o métodos cuestionables. -->
 
-          Calicles muestra una posición una poco controversial al decir afirmar que la ley es
+          <!-- Calicles muestra una posición una poco controversial al decir afirmar que la ley es
           invención de los débiles ya que desde este punto se puede entender dos cosas:
           - Calicles establece que los débiles limitan el poder y la libertad de los fuertes por
           miedo a tener que enfrentar una revelación.
           - Por otro lado, da a entender que no quiere que los fuertes estén por encima de los
           débiles, solo no quiere un abuso de “poder de los débiles” limitando a los demás para
-          recibir un beneficio a costas de otros. </p>
+          recibir un beneficio a costas de otros.  -->
+        </p>
+      </div>
+        
+      <div>
         <p>¿De qué manera se evidencia el pensamiento político de él en la actualidad?</p>
         <p>
-          En la actualidad, este pensamiento político es visto con una postura autoritaria y
+          <!-- En la actualidad, este pensamiento político es visto con una postura autoritaria y
           antidemocrática, porque evade principios fundamentales de igualdad y justicia que
           sustentan el sistema político. Además, su visión de la naturaleza humana como jerárquica
           y competitiva se encuentra en contradicción con la idea de la cooperación y la solidaridad
-          que existe en la actualidad.
+          que existe en la actualidad. -->
 
           En muchos países actualmente se ejerce el partido comunista el cual se piensa que todos
           deben obtener lo mismo a pesar de los esfuerzos o de los logros obtenidos, esto indica que
@@ -201,10 +206,10 @@
           para todos. Pues aquella persona que está más preparada y se ha esforzado por lograr sus
           objetivos deben ser aquella que por sus méritos sean recompensados.
 
-          La corrupción en muchos casos forma parte del poder, ya que muchas personas piensan
+          <!-- La corrupción en muchos casos forma parte del poder, ya que muchas personas piensan
           en su propio beneficio sin pensar en lo que necesita realmente el pueblo. Esto se ve
           reflejado en la actualidad con los distintos casos de corrupción en el que se ve que
-          aquellos encargados del poder son los que más dañan el país.
+          aquellos encargados del poder son los que más dañan el país. -->
         </p>
       </div>
     </div>
